docs: update README with Maven command instructions